tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-link-name-attribute.wyst
module removed_link_name_attribute

#[link_name("removed")]
fn entry() {}
